--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <link rel="stylesheet" href="css/app.css">
+
+</head>
+<body>
 <div class="navbar-container">
     <nav class="navbar">
         <a class="company-identification" href="#">
@@ -46,3 +55,7 @@
         Your content goes here!
     </main>
 </div>
+
+
+</body>
+</html>
